<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NumFall</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="high_score">Target</string>
    <string name="score">Score</string>
    <string name="star_symbol">Moves</string>
    <string name="level">Level</string>
    <string name="time">Level Time :</string>
    <string name="restart">Restart</string>
    <string name="help">Help</string>
    <string name="levelsButton">Levels</string>
    <string name="playButton">Play</string>
    <string name="swipeHead">How to swipe?</string>
    <string name="swipeContent">Swipe in the direction to combine 3 elements, elements should have a symbol in between to be combined.</string>
    <string name="highLightHead">How to swap cells?</string>
    <string name="highLightContent">Clicking on a cell will select the cell, click on any other cell to swap the cell. The number of remaining moves are shown on the top.</string>
    <string name="scoreHead">How to score?</string>
    <string name="scoreContent">Combining the cells increases the score by the value of the combined cells.</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="levels">Levels</string>
    <string name="level_complete">Level complete</string>
    <string name="best_time">Best Time : </string>
    <string name="menu">Menu</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="background">Background</string>
</resources>