<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE" >
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="center"
        android:src="@drawable/backgrnd" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="100dp"
        android:scrollbars="none" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/swipeHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:text="@string/swipeHead"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/swipeContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:text="@string/swipeContent"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/highLightHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:text="@string/highLightHead"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/highLightContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:text="@string/highLightContent"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/scoreHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:text="@string/scoreHead"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/scoreContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:text="@string/scoreContent"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/backToMenu"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/back_to_menu" />

</RelativeLayout>