<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE" >
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="center"
        android:src="@drawable/backgrnd" />

    <TextView
        android:id="@+id/levelCompleteText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/levelWonRow"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:background="#EEEEEE"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/level_complete"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/levelLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/levelCompleteText"
        android:layout_marginTop="62dp"
        android:padding="5dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/timeCurrent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/time"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeCurrentValue"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/time"
                android:textAllCaps="true"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/timeHigh"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/best_time"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeHighValue"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#EEEEEE"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/best_time"
                android:textAllCaps="true"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/levelWonRow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/levelMenu"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:fontFamily="sans-serif"
            android:text="@string/menu"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <Button
            android:id="@+id/levelRetry"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:fontFamily="sans-serif"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <Button
            android:id="@+id/levelNext"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:fontFamily="sans-serif"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textSize="18sp" />
    </TableRow>

</RelativeLayout>